[gd_scene load_steps=13 format=3 uid="uid://b6crhl6g0ory"]

[ext_resource type="Script" path="res://scenes/ui/menu/settings.gd" id="1"]
[ext_resource type="FontFile" uid="uid://dkpcsi5rudp7j" path="res://assets/fonts/ttf/courier.ttf" id="2_6psbf"]
[ext_resource type="Texture2D" uid="uid://thnrfs1tirjj" path="res://assets/gui/menu/backgrounds/main_panel.png" id="2_i5u15"]
[ext_resource type="PackedScene" path="res://scenes/ui/menu/settings_gameplay.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/menu/settings_general.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/ui/menu/settings_audio.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://cjragqykjl7h2" path="res://scenes/ui/menu/settings_video.tscn" id="6"]
[ext_resource type="Texture2D" uid="uid://4ccwqkvp01tf" path="res://assets/gui/menu/backgrounds/sub_panel.png" id="8_pyc6j"]

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="1"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhn4h"]
_data = {
"RESET": SubResource("3"),
"hide": SubResource("1"),
"show": SubResource("2")
}

[node name="settings" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="background" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0
texture = ExtResource("2_i5u15")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="widgets" type="Control" parent="."]
anchors_preset = 0
offset_left = -350.0
offset_top = -350.0
offset_right = 350.0
offset_bottom = 350.0

[node name="tabs" type="Control" parent="widgets"]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 320.0

[node name="general" type="Button" parent="widgets/tabs"]
layout_mode = 0
offset_right = 140.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("2_6psbf")
text = "TR_GENERAL"

[node name="video" type="Button" parent="widgets/tabs"]
layout_mode = 0
offset_top = 50.0
offset_right = 140.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("2_6psbf")
text = "TR_VIDEO"

[node name="audio" type="Button" parent="widgets/tabs"]
layout_mode = 0
offset_top = 100.0
offset_right = 140.0
offset_bottom = 130.0
theme_override_fonts/font = ExtResource("2_6psbf")
text = "TR_AUDIO"

[node name="gameplay" type="Button" parent="widgets/tabs"]
layout_mode = 0
offset_top = 150.0
offset_right = 140.0
offset_bottom = 180.0
theme_override_fonts/font = ExtResource("2_6psbf")
text = "TR_GAMEPLAY"

[node name="boxes" type="Control" parent="widgets"]
anchors_preset = 0
offset_left = 160.0
offset_right = 660.0
offset_bottom = 300.0

[node name="settings_general" parent="widgets/boxes" instance=ExtResource("4")]
anchors_preset = 0

[node name="settings_video" parent="widgets/boxes" instance=ExtResource("6")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = -500.0
offset_bottom = -300.0

[node name="settings_audio" parent="widgets/boxes" instance=ExtResource("5")]
visible = false
anchors_preset = 0

[node name="settings_gameplay" parent="widgets/boxes" instance=ExtResource("3")]
visible = false
anchors_preset = 0

[node name="back_button" type="Button" parent="widgets"]
layout_mode = 0
offset_left = 300.0
offset_top = 650.0
offset_right = 400.0
offset_bottom = 680.0
theme_override_fonts/font = ExtResource("2_6psbf")
text = "TR_BACK"

[node name="help" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 350.0
offset_top = -350.0
offset_right = 550.0
offset_bottom = 350.0

[node name="background" type="NinePatchRect" parent="help"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 700.0
texture = ExtResource("8_pyc6j")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="text" type="Label" parent="help"]
layout_mode = 0
offset_left = 10.0
offset_top = 20.0
offset_right = 190.0
offset_bottom = 670.0
theme_override_fonts/font = ExtResource("2_6psbf")
autowrap_mode = 3

[node name="animations" type="AnimationPlayer" parent="."]
speed_scale = 4.0
libraries = {
"": SubResource("AnimationLibrary_rhn4h")
}

[connection signal="focus_entered" from="widgets/tabs/general" to="." method="hide_help"]
[connection signal="pressed" from="widgets/tabs/general" to="." method="_on_general_pressed"]
[connection signal="focus_entered" from="widgets/tabs/video" to="." method="hide_help"]
[connection signal="pressed" from="widgets/tabs/video" to="." method="_on_video_pressed"]
[connection signal="focus_entered" from="widgets/tabs/audio" to="." method="hide_help"]
[connection signal="pressed" from="widgets/tabs/audio" to="." method="_on_audio_pressed"]
[connection signal="focus_entered" from="widgets/tabs/gameplay" to="." method="hide_help"]
[connection signal="pressed" from="widgets/tabs/gameplay" to="." method="_on_gameplay_pressed"]
[connection signal="focus_entered" from="widgets/back_button" to="." method="hide_help"]
[connection signal="pressed" from="widgets/back_button" to="." method="_on_back_button_pressed"]
